--- a/client/util/css/theme.css
+++ b/client/util/css/theme.css
@@ -39,8 +39,8 @@ table tr:nth-child(odd) td,
 table tr:nth-child(odd) th {
     background-color: #F0F0F0;
 }
-.button {
-	margin-bottom: 20px;
+.button-main {
+	margin-bottom: 50px;
 }
 .btn-kind-one{
 	margin-left: 20px !important;
