--- a/client/util/css/theme.css
+++ b/client/util/css/theme.css
@@ -63,6 +63,6 @@ table tr:nth-child(odd) th {
 .row {
 	padding: 0px !important;
 }
-.bg-gray {
-	background-color: red !important;
-}
+/*.bg-gray {
+	background-color: gray !important;
+}*/
